WP-9065 desktop width 1200 - 1320px spacing issue related code changes

--- a/sass/partials/base/00-variables/_base.sass
+++ b/sass/partials/base/00-variables/_base.sass
@@ -90,3 +90,4 @@ $bp-tablet-pro-port: (min-width 1024px) (max-width 1366px) (orientation portrait
 $bp-tablet-pro-land: (min-width 1024px) (max-width 1366px) (orientation landscape)
 $bp-tablet-gap: 1101px 1199px
 $bp-tablet-range: 768px 1199px
+$bp-desktop-custom-width: (min-width 1200px) (max-width 1320px)
